# keyboard_tools

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  install.bat  install.sh
cmake/: keyboard_toolsConfig.cmake.in
cmake/templates/: config.hpp.in
doc/: README_EN.md  README_ZH.md
example/: CMakeLists.txt
example/disable_key/: CMakeLists.txt  main.cpp
example/echo/: CMakeLists.txt  main.cpp
example/quick_input_pi/: CMakeLists.txt  main.cpp
example/remap_key/: CMakeLists.txt  main.cpp
include/kbdt/: defines.hpp  kbdt.hpp  keyutils.hpp  types.hpp
include/keyboard_tools/: defines.hpp  key_utility.hpp  key_utilitys.hpp  keyboard_tools.hpp  types.hpp
src/: kbdt.cpp  kbdt_details.hpp  keyboard_tools.cpp  keyboard_tools_details.hpp  uuid.cpp  uuid.hpp
src/key_utility/: key_utility.cpp  key_utility_linux.cpp  key_utility_mac.cpp  key_utility_win.cpp
src/key_utilitys/: key_utilitys.cpp  key_utilitys_linux.cpp  key_utilitys_mac.cpp  key_utilitys_win.cpp
src/keyutils/: keyutils.cpp  keyutils_linux.cpp  keyutils_mac.cpp  keyutils_win.cpp
src/linux/: event_converter.cpp  event_converter.hpp  event_handler_details.cpp  event_sender_details.cpp  event_state_details.cpp  global_uinput.cpp  global_uinput.hpp  kbd_uinput.cpp  kbd_uinput.hpp  kbdt_event_handler_details.cpp  kbdt_event_sender_details.cpp
src/mac/: event_converter.cpp  event_converter.hpp  event_handler_details.cpp  event_sender_details.cpp  event_state_details.cpp  kbdt_event_handler_details.cpp  kbdt_event_sender_details.cpp
src/win/: event_converter.cpp  event_converter.hpp  event_handler_details.cpp  event_sender_details.cpp  event_state_details.cpp  kbdt_event_handler_details.cpp  kbdt_event_sender_details.cpp
